--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
+        		<li><a href="/">About</a></li>
+			<li><a href="/research">Research</a></li>
+	        	<li><a href="/pubs">Publications</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Maurits Meijers</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Welcome</h1>
+				<p>My name is Dr. Maurits J. Meijers. I am an Assistant Professor of Political Science at the Radboud University Nijmegen in the Netherlands</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
