--- a/index.html
+++ b/index.html
@@ -1,30 +1,9 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Dr. Maurits J. Meijers</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">About</a></li>
-			<li><a href="/research">Research</a></li>
-	        	<li><a href="/pubs">Publications</a></li>
-        		<li><a href="/cv">CV</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
+---
+layout: default
+title: Dr. Maurits J. Meijers, Political Scientist
+---
+	<div class="blurb">
         		<h1>Welcome</h1>
 				<p>My name is Dr. Maurits J. Meijers. I am an Assistant Professor of Political Science at the Radboud University Nijmegen in the Netherlands</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:maurits.meijers@ru.nl">email</a></li>
-        		<li><a href="https://www.ru.nl/en/people/meijers-m">Radboud University Nijmegen Website</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+    	</div><!-- /.blurb -->
+
