--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: Dr. Maurits J. Meijers, Political Scientist
 ---
 	<div class="blurb">
         		<h1>Welcome</h1>
+		<img src="maurits.jpeg" alt="Maurits Meijers>
+
 				<p>My name is Dr. Maurits J. Meijers. I am an Assistant Professor of Political Science at the Radboud University Nijmegen in the Netherlands</p>
     	</div><!-- /.blurb -->
 
